--- a/femida-admin/frontend/public/locales/ky/common.json
+++ b/femida-admin/frontend/public/locales/ky/common.json
@@ -17,5 +17,28 @@
   "loading": "Жүктөлүүдө...",
   "date": "Дата",
   "guest": "Конок",
-  "room": "Бөлмө"
+  "room": "Бөлмө",
+  "Бронирование": "Брондоо",
+  "Комната": "Бөлмө",
+  "Корпус": "Корпус",
+  "Класс": "Класс",
+  "Тип": "Түрү",
+  "Гость": "Конок",
+  "Количество": "Саны",
+  "чел.": "адам",
+  "Период": "Мөөнөтү",
+  "Статус": "Статус",
+  "status_repair": "Оңдоодо",
+  "class_standard": "Стандарт",
+  "class_lux": "Люкс",
+  "class_semi_lux": "Жарым люкс",
+  "class_vip": "VIP",
+  "class_proraba": "Прорабдын үйү",
+  "class_aurora": "Аврора",
+  "class_domik": "Үйчө",
+  "class_three_floor_lux": "3 кабат люкс",
+  "class_middle_vip_lux": "Орто VIP люкс",
+  "class_pink": "Кызгылт",
+  "class_sklad": "Кампа",
+  "class_other": "Башка"
 }
