--- a/femida-admin/frontend/public/locales/ru/common.json
+++ b/femida-admin/frontend/public/locales/ru/common.json
@@ -17,5 +17,28 @@
   "loading": "Загрузка...",
   "date": "Дата",
   "guest": "Гость",
-  "room": "Комната"
+  "room": "Комната",
+  "Бронирование": "Бронирование",
+  "Комната": "Комната",
+  "Корпус": "Корпус",
+  "Класс": "Класс",
+  "Тип": "Тип",
+  "Гость": "Гость",
+  "Количество": "Количество",
+  "чел.": "чел.",
+  "Период": "Период",
+  "Статус": "Статус",
+  "status_repair": "Ремонт",
+  "class_standard": "Стандарт",
+  "class_lux": "Люкс",
+  "class_semi_lux": "Полу-люкс",
+  "class_vip": "ВИП",
+  "class_proraba": "Дом прораба",
+  "class_aurora": "Аврора",
+  "class_domik": "Домик",
+  "class_three_floor_lux": "3-х этажка люкс",
+  "class_middle_vip_lux": "Средний ВИП люкс",
+  "class_pink": "Розовый",
+  "class_sklad": "Склад",
+  "class_other": "Другое"
 }
