--- a/frontend/public/locales/ru/common.json
+++ b/frontend/public/locales/ru/common.json
@@ -30,15 +30,8 @@
   "Статус": "Статус",
   "status_repair": "Ремонт",
   "class_standard": "Стандарт",
-  "class_lux": "Люкс",
   "class_semi_lux": "Полу-люкс",
-  "class_vip": "ВИП",
-  "class_proraba": "Дом прораба",
-  "class_aurora": "Аврора",
-  "class_domik": "Домик",
-  "class_three_floor_lux": "3-х этажка люкс",
-  "class_middle_vip_lux": "Средний ВИП люкс",
-  "class_pink": "Розовый",
-  "class_sklad": "Склад",
-  "class_other": "Другое"
+  "class_lux": "Люкс"
+
+
 }
