--- a/frontend/public/locales/ru/common.json
+++ b/frontend/public/locales/ru/common.json
@@ -2,7 +2,7 @@
   "rooms": "Номера",
   "bookings": "Бронирования",
   "guests": "Гости",
-  "users": "Пользователи",
+  "users": "Сотрудники",
   "logout": "Выйти",
   "search": "Поиск",
   "filter": "Фильтр",
